# wled-audioreact

./: .gitignore  LICENSE  LICENSE.txt  README.md
dependencies/asio/PaxHeader/: Makefile.am  Makefile.in  asio  asio.hpp
dependencies/asio/asio/PaxHeader/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  associator.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  bind_immediate_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  (+99 more)
dependencies/asio/asio/detail/PaxHeader/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  bulk_executor_op.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  composed_work.hpp  concurrency_hint.hpp  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  eventfd_select_interrupter.hpp  exception.hpp  executor_function.hpp  executor_op.hpp  fd_set_adapter.hpp  fenced_block.hpp  functional.hpp  (+191 more)
dependencies/asio/asio/execution/PaxHeader/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  detail  execute.hpp  executor.hpp  impl  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  prefer_only.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
dependencies/asio/asio/experimental/PaxHeader/: append.hpp  as_single.hpp  as_tuple.hpp  awaitable_operators.hpp  basic_channel.hpp  basic_concurrent_channel.hpp  cancellation_condition.hpp  channel.hpp  channel_error.hpp  channel_traits.hpp  co_composed.hpp  co_spawn.hpp  concurrent_channel.hpp  coro.hpp  coro_traits.hpp  deferred.hpp  detail  impl  parallel_group.hpp  prepend.hpp  promise.hpp  use_coro.hpp  use_promise.hpp
dependencies/asio/asio/generic/PaxHeader/: basic_endpoint.hpp  datagram_protocol.hpp  detail  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
dependencies/asio/asio/impl/PaxHeader/: any_completion_executor.ipp  any_io_executor.ipp  append.hpp  as_tuple.hpp  awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  cancellation_signal.ipp  co_spawn.hpp  connect.hpp  connect_pipe.hpp  connect_pipe.ipp  consign.hpp  deferred.hpp  detached.hpp  error.ipp  error_code.ipp  execution_context.hpp  execution_context.ipp  executor.hpp  executor.ipp  handler_alloc_hook.ipp  io_context.hpp  io_context.ipp  multiple_exceptions.ipp  prepend.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  serial_port_base.hpp  serial_port_base.ipp  spawn.hpp  src.hpp  system_context.hpp  system_context.ipp  system_executor.hpp  thread_pool.hpp  thread_pool.ipp  use_awaitable.hpp  (+3 more)
dependencies/asio/asio/ip/PaxHeader/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  basic_resolver_results.hpp  detail  host_name.hpp  icmp.hpp  impl  multicast.hpp  network_v4.hpp  network_v6.hpp  resolver_base.hpp  resolver_query_base.hpp  tcp.hpp  udp.hpp  unicast.hpp  v6_only.hpp
dependencies/asio/asio/local/PaxHeader/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp  detail  seq_packet_protocol.hpp  stream_protocol.hpp
dependencies/asio/asio/posix/PaxHeader/: basic_descriptor.hpp  basic_stream_descriptor.hpp  descriptor.hpp  descriptor_base.hpp  (+1 more)
dependencies/fftw/: libfftw3-3.exp
dependencies/portaudio_windows_x64/: LICENSE.txt  portaudio_x64.lib
hardware/: PARTS_LIST.md
hardware/CaseCAD/: 01-Case-Compound.stl  01-Case.FCStd  01-Case.FCStd1
hardware/LEDController/: LEDController.kicad_prl  LEDController.kicad_sch
planning/: wled-audioreact.drawio
schematics/LEDController/: LEDController.kicad_pro  LEDController.kicad_sch
src/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  Config.cpp  Config.h  Effect.h  EffectParameters.h  Log.cpp  Log.h  MaxVolumeEffect.cpp  MaxVolumeEffect.h  NetworkHandler.cpp  NetworkHandler.h  SignalController.cpp  SignalController.h  WLEDSocket.cpp  WLEDSocket.h  backup_settings.json  main.cpp  settings.json
src/effects/: AverageVolumeEffect.cpp  AverageVolumeEffect.h  DFTElectronicStrobo.cpp  DFTElectronicStrobo.h  DFTFrequencySpectrum.cpp  DFTFrequencySpectrum.h  DFTLowFrequencySpectrum.cpp  DFTLowFrequencySpectrum.h  DFTLowPassStrobo.cpp  DFTLowPassStrobo.h  DFTRockStrobo.cpp  DFTRockStrobo.h  Effects.cpp  Effects.h  MaxVolumeEffect.cpp  MaxVolumeEffect.h  RMSMaxVolumeEffect.cpp  RMSMaxVolumeEffect.h  RMSMaxVolumeStrobo.cpp  RMSMaxVolumeStrobo.h
src/linux/: AudioProcessor.cpp  AudioProcessor.h  FFT.cpp  FFT.h
src/win/: AudioProcessor.cpp  AudioProcessor.h  FFT.cpp  FFT.h
(+189 files in other folders)
